# epoch

./: LICENSE  README.md  package-lock.json  package.json
app/: .prettierignore  empty-module.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
app/app/: globals.css  layout.tsx  manifest.ts  page.tsx  providers.tsx  robots.ts  sitemap.ts
app/app/markets/: page.tsx
app/app/markets/[id]/: page.tsx
app/app/markets/positions/: page.tsx
app/components/: Header.tsx  SplashScreen.tsx  WalletButton.tsx  toggle.tsx
app/components/markets/: BetForm.tsx  CreateMarketDialog.tsx  MarketCard.tsx  MarketDetails.tsx  MarketList.tsx  PositionCard.tsx  index.ts
app/components/ui/: badge.tsx  button.tsx  card.tsx  countdown.tsx  dialog.tsx  input.tsx  skeleton.tsx
app/hooks/: index.ts  useBet.ts  useHeliusWebSocket.ts  useMarket.ts  useMarkets.ts  usePosition.ts  usePrivyWallet.ts
app/lib/: helius.ts
app/lib/contracts/: contract.json  program.ts
app/types/: market.ts
contract/: .gitignore  Anchor.toml  Arcium.toml  package.json
contract/encrypted-ixs/: Cargo.toml
contract/encrypted-ixs/src/: lib.rs
contract/programs/contract/: Cargo.toml
contract/programs/contract/src/: constants.rs  errors.rs  events.rs  lib.rs
contract/programs/contract/src/state/: market.rs  mod.rs  pool.rs  position.rs
contract/scripts/: finalize-comp-def.ts  init-comp-defs.ts  upload-circuit.ts  wait-for-mxe.js
contract/tests/: contract.ts
